bin_PROGRAMS = vs2dreactive$(EXEEXT)
vs2dreactive_SOURCES = vsrt.cxx\
	vsrt.h\
	gzstream.cxx\
	gzstream.h\
	vsrt_files.c\
	vsrt_files.h\
	vsrtsubs.c\
	cxxvsrtSubs.c\
	vsrtproto.h\
	Pointers_to_fortran.h\
	phreeqcpp/char_star.h\
	phreeqcpp/cxxKinetics.cxx\
	phreeqcpp/cxxKinetics.h\
	phreeqcpp/cxxMix.cxx\
	phreeqcpp/cxxMix.h\
	phreeqcpp/Dictionary.h\
	phreeqcpp/Dictionary.cxx\
	phreeqcpp/dumper.cpp\
	phreeqcpp/dumper.h\
	phreeqcpp/Exchange.cxx\
	phreeqcpp/Exchange.h\
	phreeqcpp/ExchComp.cxx\
	phreeqcpp/ExchComp.h\
	phreeqcpp/GasPhase.cxx\
	phreeqcpp/GasPhase.h\
	phreeqcpp/ISolution.cxx\
	phreeqcpp/ISolution.h\
	phreeqcpp/ISolutionComp.cxx\
	phreeqcpp/ISolutionComp.h\
	phreeqcpp/KineticsComp.cxx\
	phreeqcpp/KineticsComp.h\
	phreeqcpp/NameDouble.cxx\
	phreeqcpp/NameDouble.h\
	phreeqcpp/NumKeyword.cxx\
	phreeqcpp/NumKeyword.h\
	phreeqcpp/Parser.cxx\
	phreeqcpp/Parser.h\
	phreeqcpp/Phreeqc.h\
	phreeqcpp/Phreeqc_class.h\
	phreeqcpp/PPassemblage.cxx\
	phreeqcpp/PPassemblage.h\
	phreeqcpp/PPassemblageComp.cxx\
	phreeqcpp/PPassemblageComp.h\
	phreeqcpp/Reaction.cxx\
	phreeqcpp/Reaction.h\
	phreeqcpp/ReadClass.cxx\
	phreeqcpp/runner.cpp\
	phreeqcpp/runner.h\
	phreeqcpp/Solution.cxx\
	phreeqcpp/Solution.h\
	phreeqcpp/SolutionIsotope.cxx\
	phreeqcpp/SolutionIsotope.h\
	phreeqcpp/SolutionIsotopeList.cxx\
	phreeqcpp/SolutionIsotopeList.h\
	phreeqcpp/SSassemblage.cxx\
	phreeqcpp/SSassemblage.h\
	phreeqcpp/SSassemblageSS.cxx\
	phreeqcpp/SSassemblageSS.h\
	phreeqcpp/StorageBin.cxx\
	phreeqcpp/StorageBin.h\
	phreeqcpp/StorageBinList.cpp\
	phreeqcpp/StorageBinList.h\
	phreeqcpp/Surface.cxx\
	phreeqcpp/Surface.h\
	phreeqcpp/SurfaceCharge.cxx\
	phreeqcpp/SurfaceCharge.h\
	phreeqcpp/SurfaceComp.cxx\
	phreeqcpp/SurfaceComp.h\
	phreeqcpp/System.cxx\
	phreeqcpp/System.h\
	phreeqcpp/Temperature.cxx\
	phreeqcpp/Temperature.h\
	phreeqcpp/Utils.cxx\
	phreeqcpp/Utils.h\
	phreeqcpp/phreeqc/advection.c\
	phreeqcpp/phreeqc/basic.c\
	phreeqcpp/phreeqc/basic.h\
	phreeqcpp/phreeqc/basicsubs.c\
	phreeqcpp/phreeqc/cl1.c\
	phreeqcpp/phreeqc/cvdense.c\
	phreeqcpp/phreeqc/cvdense.h\
	phreeqcpp/phreeqc/cvode.c\
	phreeqcpp/phreeqc/cvode.h\
	phreeqcpp/phreeqc/dense.c\
	phreeqcpp/phreeqc/dense.h\
	phreeqcpp/phreeqc/dw.c\
	phreeqcpp/phreeqc/global.h\
	phreeqcpp/phreeqc/global_structures.h\
	phreeqcpp/phreeqc/input.c\
	phreeqcpp/phreeqc/input.h\
	phreeqcpp/phreeqc/integrate.c\
	phreeqcpp/phreeqc/inverse.c\
	phreeqcpp/phreeqc/isotopes.c\
	phreeqcpp/phreeqc/kinetics.c\
	phreeqcpp/phreeqc/kinetics.h\
	phreeqcpp/phreeqc/mainsubs.c\
	phreeqcpp/phreeqc/model.c\
	phreeqcpp/phreeqc/nvector.c\
	phreeqcpp/phreeqc/nvector.h\
	phreeqcpp/phreeqc/nvector_serial.c\
	phreeqcpp/phreeqc/nvector_serial.h\
	phreeqcpp/phreeqc/output.c\
	phreeqcpp/phreeqc/output.h\
	phreeqcpp/phreeqc/p2c.h\
	phreeqcpp/phreeqc/p2clib.c\
	phreeqcpp/phreeqc/parse.c\
	phreeqcpp/phreeqc/phqalloc.c\
	phreeqcpp/phreeqc/phqalloc.h\
	phreeqcpp/phreeqc/phrqproto.h\
	phreeqcpp/phreeqc/phrqtype.h\
	phreeqcpp/phreeqc/pitzer.c\
	phreeqcpp/phreeqc/pitzer.h\
	phreeqcpp/phreeqc/pitzer_structures.c\
	phreeqcpp/phreeqc/pitzer_structures.h\
	phreeqcpp/phreeqc/prep.c\
	phreeqcpp/phreeqc/print.c\
	phreeqcpp/phreeqc/read.c\
	phreeqcpp/phreeqc/readtr.c\
	phreeqcpp/phreeqc/sit.c\
	phreeqcpp/phreeqc/smalldense.c\
	phreeqcpp/phreeqc/smalldense.h\
	phreeqcpp/phreeqc/spread.c\
	phreeqcpp/phreeqc/step.c\
	phreeqcpp/phreeqc/structures.c\
	phreeqcpp/phreeqc/sundialsmath.c\
	phreeqcpp/phreeqc/sundialsmath.h\
	phreeqcpp/phreeqc/sundialstypes.h\
	phreeqcpp/phreeqc/tally.c\
	phreeqcpp/phreeqc/tidy.c\
	phreeqcpp/phreeqc/transport.c\
	phreeqcpp/phreeqc/utilities.c\
	KDtree/Cell_Face.h\
	KDtree/KDtree.h\
	KDtree/KDtree.cpp\
	KDtree/KDtree2.h\
	KDtree/KDtree2.cpp\
	KDtree/Point.cpp\
	KDtree/Point.h\
    include/d_arrays.inc\
    include/d_BF.inc\
    include/d_BFAlloc.inc\
    include/d_cleanup.inc\
    include/d_coordin.inc\
    include/d_compname.inc\
    include/d_disch.inc\
    include/d_dumm.inc\
    include/dumm1.inc\
    include/dumm1Alloc.inc\
    include/dumm1Dealloc.inc\
    include/dumm2.inc\
    include/dumm2Alloc.inc\
    include/dumm2Dealloc.inc\
    include/dumm3.inc\
    include/dumm3Alloc.inc\
    include/dumm3Dealloc.inc\
    include/d_equat.inc\
    include/d_equats.inc\
    include/d_hcon.inc\
    include/d_idumm.inc\
    include/d_idummAlloc.inc\
    include/d_ihdum.inc\
    include/d_ihdummAlloc.inc\
    include/d_ihdummDealloc.inc\
    include/d_isdum.inc\
    include/d_isdummAlloc.inc\
    include/d_isdummDealloc.inc\
    include/d_itemblo.inc\
    include/d_itembloAlloc.inc\
    include/d_itembloDealloc.inc\
    include/d_itemtxb.inc\
    include/d_itemtxbAlloc.inc\
    include/d_itemtxbDealloc.inc\
    include/d_jtxx.inc\
    include/d_kcon.inc\
    include/d_kdum.inc\
    include/d_kdumDealloc.inc\
    include/d_modules.inc\
    include/d_mprop.inc\
    include/d_obsp.inc\
    include/d_obst.inc\
    include/d_pit.inc\
    include/d_plott.inc\
    include/d_press.inc\
    include/d_ptet.inc\
    include/d_ptetAlloc.inc\
    include/d_rpropsh.inc\
    include/r_propshAlloc.inc\
    include/d_pricount.inc\
    include/d_phreeqcc.inc\
    include/d_rspac.inc\
    include/d_scon.inc\
    include/d_sconAlloc.inc\
    include/d_sip.inc\
    include/d_solmassb.inc\
    include/d_solindex.inc\
    include/d_spfc.inc\
    include/s_spfcAlloc.inc\
    include/d_temp.inc\
    include/d_tempcc.inc\
    include/d_trxxh.inc\
    include/d_trxv.inc\
    include/d_trxx.inc\
    include/d_trxy1.inc\
    include/d_trxy2.inc\
	vs2dt3_3_reactive_withoutArgus1.f90
vs2dreactive_LDADD = $(FCLIBS)
#vs2dreactive_LDFLAGS = -zlib1g-dev 
AM_CPPFLAGS=-I$(top_srcdir)/src/phreeqcpp -I$(top_srcdir)/src/phreeqcpp/phreeqc -I$(top_srcdir)/src/KDtree -nostdlib
AM_FCFLAGS=-I$(top_srcdir)/src/include 
COMPILE = $(CXXCOMPILE)
#LTCOMPILE = $(LTCXXCOMPILE)
